--- a/Frontend/almacen/tsconfig.json
+++ b/Frontend/almacen/tsconfig.json
@@ -14,6 +14,7 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
+    "strictPropertyInitialization": false,
     "target": "es2015",
     "module": "es2020",
     "lib": [
@@ -23,6 +24,7 @@
   },
   "angularCompilerOptions": {
     "strictInjectionParameters": true,
+    "strictPropertyInitialization": false,
     "strictInputAccessModifiers": true,
     "strictTemplates": true
   }
